metadata/objects/GRAX_Archive_Process__c.object
<CustomObject>
    <description>This object is used when the user creates a &quot;Scheduled Process&quot; and decides to Archive records from Salesforce.</description>
    <fields>
        <fullName>Async_Records_Successfully_Sent__c</fullName>
        <label># Async Records Successfully Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Async_Records_to_Process__c</fullName>
        <label># Async Records to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_Delete_GRAX_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Delete GRAX Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Unique_Key__c</fullName>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Schedule_Process__c</fullName>
        <label>GRAX Schedule Process</label>
        <referenceTo>GRAX_Schedule_Process__c</referenceTo>
        <relationshipLabel>GRAX Archive Processes</relationshipLabel>
        <relationshipName>GRAX_Archive_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Records_Successfully_Sent__c</fullName>
        <label># Records Successfully Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_To_Process__c</fullName>
        <description>Count of the # of records which have been processed within Salesforce</description>
        <label># Records To Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Records_To_Process__c &gt; 0 &amp;&amp; Records_Successfully_Sent__c = Records_To_Process__c &amp;&amp; Async_Records_Successfully_Sent__c = Async_Records_to_Process__c &amp;&amp; Total_SFDC_Records_Deleted__c = 0 &amp;&amp; Total_SFDC_Records_Failed_to_Delete__c = 0, 
  &apos;Ready to Delete&apos;,
  IF(Total_SFDC_Records__c &gt; 0 &amp;&amp; Total_SFDC_Records__c != Total_SFDC_Records_Deleted__c + Total_SFDC_Records_Failed_to_Delete__c &amp;&amp; (Total_SFDC_Records_Deleted__c &gt; 0 || Total_SFDC_Records_Failed_to_Delete__c &gt; 0),
    &apos;Delete Process Started&apos;,
    IF(Total_SFDC_Records__c &gt; 0 &amp;&amp; Total_SFDC_Records__c = Total_SFDC_Records_Deleted__c + Total_SFDC_Records_Failed_to_Delete__c,
      &apos;Delete Process Completed&apos;,
      IF(ISPICKVAL(GRAX_Schedule_Process__r.Status__c, &apos;Completed&apos;) &amp;&amp; Records_To_Process__c = 0,
        &apos;Delete Process Completed&apos;,
        &apos;Waiting Backup to Complete&apos;
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_SFDC_Records_Deleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Total SFDC Records Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SFDC_Records_Failed_to_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Total SFDC Records Failed to Delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SFDC_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Total SFDC Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRAX Archive Process</label>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Archive Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Archive Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>